
- Improved Zend Engine
  . Improved parse error messages. (Felipe)

- Improved CLI SAPI:
  . Added built-in web server that is intended for testing purpose.
    (Moriyoshi)

- Improved PHP-FPM SAPI:
  . Added partial syslog support (on error_log only). FR #52052. (fat)
  . Lowered default value for Process Manager. FR #54098. (fat)

- Improved core functions:
  . Changed http_response_code() to be able to set a response code. (Kalle)
  . Fixed crypt_blowfish handling of 8-bit characters. (Stas) (CVE-2011-2483)
  . Fixed bug#55084 (Function registered by header_register_callback is
    called only once per process). (Hannes)

- Improved DOM extension:
  . Added the ability to pass options to loadHTML (Chregu, fxmulder at gmail dot com)

- OpenSSL extension:
  . Use php's implementation for Windows Crypto API in 
    openssl_random_pseudo_bytes. (Pierre)

20 Jun 2011, PHP 5.4.0 Alpha 1
- autoconf 2.59+ is now supported (and required) for generating the
  configure script with ./buildconf. Autoconf 2.60+ is desirable
  otherwise the configure help order may be incorrect.  (Rasmus, Chris Jones)

- Removed legacy features:
  . break/continue $var syntax. (Dmitry)
  . Safe mode and all related ini options. (Kalle)
  . register_globals and register_long_arrays ini options. (Kalle)
  . import_request_variables(). (Kalle)
  . allow_call_time_pass_reference. (Pierrick)
  . define_syslog_variables ini option and its associated function. (Kalle)
  . highlight.bg ini option. (Kalle)
  . Session bug compatibility mode (session.bug_compat42 and
    session.bug_compat_warn ini options). (Kalle)
  . session_is_registered(), session_register() and session_unregister() 
    functions. (Kalle)
  . y2k_compliance ini option. (Kalle)

- Moved extensions to PECL: (Johannes)
  . ext/sqlite.  (Note: the ext/sqlite3 and ext/pdo_sqlite extensions are
    not affected)

- Changed $_SERVER['REQUEST_TIME'] to include microsecond precision. (Ilia)