@@ -14,6 +14,8 @@
 - Improved PHP-FPM SAPI:
   . Added partial syslog support (on error_log only). FR #52052. (fat)
   . Lowered default value for Process Manager. FR #54098. (fat)
+  . Enhance security by limiting access to user defined extensions.
+    FR #55181. (fat)
 
 - Improved core functions:
   . Changed http_response_code() to be able to set a response code. (Kalle)
